--- a/src/main/resources/templates/calculator.html
+++ b/src/main/resources/templates/calculator.html
@@ -23,5 +23,12 @@
 
     <button type="submit">Calculate</button>
     </form>
+    <div th:if="${errorMessage}" class="error">
+        <p th:text="${errorMessage}"></p>
+    </div>
+
+    <div th:if="${result}" class="result">
+        <h2>Result: <span th:text="${result}"></span></h2>
+    </div>
 </body>
 </html>
