--- a/src/main/resources/templates/calculator.html
+++ b/src/main/resources/templates/calculator.html
@@ -3,6 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>계산하는 계산기</title>
+    <style>
+        @font-face {
+    font-family: 'Ownglyph_ryurue-Rg';
+    src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/2405-2@1.0/Ownglyph_ryurue-Rg.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+}
+
+        body {
+            font-family: 'Ownglyph_ryurue-Rg';
+            background-color: #C4E0E5
+        }
+    </style>
 </head>
 <body>
     <h1>계산하는 계산기</h1>
